This is adding some styling, will mess with JS later

--- a/alcohol-drinks/index.html
+++ b/alcohol-drinks/index.html
@@ -23,7 +23,7 @@
       <!-- This is the navbar-->
       <nav class="navbar">
         <div class="logo_header">
-          <a href="./index.html" class="logo"
+          <a href="../index.html" class="logo"
             ><img class="img-logo" src="./assets/api-image-logo.jpg" /><span
               >API HUB</span
             ></a
