Adding the loading in various drinks

--- a/alcohol-drinks/index.html
+++ b/alcohol-drinks/index.html
@@ -62,13 +62,13 @@
 
           <select class="dropdown" name="drinks" id="drinks">
             <option value="random-drink">Random Drink</option>
-            <option value="Rum">Rum</option>
-            <option value="Gin">Gin</option>
-            <option value="Tequila">Tequila</option>
-            <option value="Vodka">Vodka</option>
-            <option value="Brandy">Brandy</option>
-            <option value="Whiskey">Whiskey</option>
-            <option value="Liqueur">Liqueur</option>
+            <option disabled value="Rum">Loading...</option>
+            <option disabled value="Gin">Loading...</option>
+            <option disabled value="Tequila">Loading...</option>
+            <option disabled value="Vodka">Loading...</option>
+            <option disabled value="Brandy">Loading...</option>
+            <option disabled value="Whiskey">Loading...</option>
+            <option disabled value="Liqueur">Loading...</option>
           </select>
           <button class="generate-btn" type="button">Generate Drink</button>
 
